--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,17 +15,17 @@ header {
   background-color: #2a607c;
 }
 
-header h1 {
+h1 {
   display: inline-block;
   font-size: 48px;
   color: #ffffff;
 }
 
-header h1 .seo {
+.seo {
   color: #d9dcd6;
 }
 
-header nav {
+nav {
   padding-top: 15px;
   margin-right: 20px;
   float: right;
@@ -33,22 +33,18 @@ header nav {
   font-size: 20px;
 }
 
-header nav ul {
+nav ul {
   list-style-type: none;
 }
 
-header nav ul li {
+nav ul li {
   display: inline-block;
   margin-left: 25px;
 }
 
-header nav ul li a {
+nav ul li a {
   color: #ffffff;
   text-decoration: none;
-}
-
-p {
-  font-size: 16px;
 }
 
 figure {
@@ -60,20 +56,53 @@ figure {
   background-position: center;
 }
 
+main {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: #ffffff;
+}
+
+section {
+  width: 75%;
+  display: inline-block;
+  margin-left: 20px;
+}
+
+.search-engine-optimization {
+  margin-bottom: 20px;
+  padding: 50px;
+  height: 300px;
+  background-color: #0072bb;
+}
+
+.online-reputation-management {
+  margin-bottom: 20px;
+  padding: 50px;
+  height: 300px;
+  background-color: #0072bb;
+}
+
+.social-media-marketing {
+  margin-bottom: 20px;
+  padding: 50px;
+  height: 300px;
+  background-color: #0072bb;
+}
+
+h2 {
+  margin-bottom: 20px;
+  font-size: 36px;
+}
+
 .float-left-img {
   float: left;
   margin-right: 25px;
+  max-height: 200px;
 }
 
 .float-right-img {
   float: right;
   margin-left: 25px;
-}
-
-.content {
-  width: 75%;
-  display: inline-block;
-  margin-left: 20px;
+  max-height: 200px;
 }
 
 .benefits {
@@ -83,36 +112,22 @@ figure {
   float: right;
   width: 20%;
   height: 100%;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   background-color: #2589bd;
 }
 
 .benefit-lead {
   margin-bottom: 32px;
-  color: #ffffff;
 }
 
 .benefit-brand {
   margin-bottom: 32px;
-  color: #ffffff;
 }
 
 .benefit-cost {
   margin-bottom: 32px;
-  color: #ffffff;
 }
 
-.benefit-lead h3 {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.benefit-brand h3 {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.benefit-cost h3 {
+h3 {
   margin-bottom: 10px;
   text-align: center;
 }
@@ -133,60 +148,6 @@ figure {
   display: block;
   margin: 10px auto;
   max-width: 150px;
-}
-
-.search-engine-optimization {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
-}
-
-.online-reputation-management {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
-}
-
-.social-media-marketing {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
-}
-
-.search-engine-optimization img {
-  max-height: 200px;
-}
-
-.online-reputation-management img {
-  max-height: 200px;
-}
-
-.social-media-marketing img {
-  max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
-}
-
-.online-reputation-management h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
-}
-
-.social-media-marketing h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
 }
 
 footer {
