--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ header {
   background-color: #2a607c;
 }
 
-h1 {
+.logo {
   display: inline-block;
   font-size: 48px;
   color: #ffffff;
@@ -37,17 +37,17 @@ nav ul {
   list-style-type: none;
 }
 
-nav ul li {
+nav li {
   display: inline-block;
   margin-left: 25px;
 }
 
-nav ul li a {
+nav a {
   color: #ffffff;
   text-decoration: none;
 }
 
-figure {
+.banner {
   height: 800px;
   width: 100%;
   margin-bottom: 25px;
@@ -56,30 +56,30 @@ figure {
   background-position: center;
 }
 
-main {
+.content {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: #ffffff;
 }
 
-section {
+.main-content {
   width: 75%;
   display: inline-block;
   margin-left: 20px;
 }
 
-section article {
+.main-content article {
   margin-bottom: 20px;
   padding: 50px;
   height: 300px;
   background-color: #0072bb;
 }
 
-h2 {
+.main-content h2 {
   margin-bottom: 20px;
   font-size: 36px;
 }
 
-section article img {
+.main-content img {
   margin-right: 25px;
   max-height: 200px;
 }
@@ -92,7 +92,7 @@ section article img {
   float: right;
 }
 
-aside {
+.benefits {
   margin-right: 20px;
   padding: 20px;
   clear: both;
@@ -102,16 +102,16 @@ aside {
   background-color: #2589bd;
 }
 
-aside article {
+.benefits article {
   margin-bottom: 32px;
 }
 
-h3 {
+.benefits h3 {
   margin-bottom: 10px;
   text-align: center;
 }
 
-aside article img {
+.benefits img {
   display: block;
   margin: 10px auto;
   max-width: 150px;
