--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,8 @@ nav a {
   background-position: center;
 }
 
-.content {
+.main content,
+aside {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: #ffffff;
 }
@@ -67,7 +68,7 @@ nav a {
   margin-left: 20px;
 }
 
-.main-content article {
+.main-content section {
   margin-bottom: 20px;
   padding: 50px;
   height: 300px;
@@ -102,7 +103,7 @@ nav a {
   background-color: #2589bd;
 }
 
-.benefits article {
+.benefits section {
   margin-bottom: 32px;
 }
 
