--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,8 @@ body {
   background-color: #d9dcd6;
 }
 
-header {
+/*This is the class selector for class name of header */
+.header {
   padding: 20px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
@@ -47,6 +48,7 @@ nav a {
   text-decoration: none;
 }
 
+/*This is the background image*/
 .banner {
   height: 800px;
   width: 100%;
@@ -56,8 +58,8 @@ nav a {
   background-position: center;
 }
 
-.main content,
-aside {
+.main-content,
+.benefits {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: #ffffff;
 }
